--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -581,11 +581,21 @@
     window.onload = function() {
         var popupMessages = document.getElementById('popup-messages');
         if (popupMessages && popupMessages.children.length > 0) {
+            
+            var iconType = 'error'; 
+            var titleText = '¡ERROR!';
+
+            // Verificar si hay un mensaje de éxito
+            var successMessages = popupMessages.getElementsByClassName('alert-success');
+            if (successMessages.length > 0) {
+                iconType = 'success';
+                titleText = '¡ÉXITO!';
+            }
+
             Swal.fire({
-                icon: 'success',  // tipo de mensaje: 'success', 'error', 'warning', 'info', 'question'
-                title: '¡ÉXITO!',
+                icon: iconType, 
+                title: titleText,
                 html: popupMessages.innerHTML,
-                allowOutsideClick: false
             });
         }
     }
