--- a/EcoWEB/Apps/Usuarios/templates/muestra_productores.html
+++ b/EcoWEB/Apps/Usuarios/templates/muestra_productores.html
@@ -158,6 +158,8 @@
                             <p>{{ productor.telefono }}</p>
                             <p>{{ productor.email }}</p>
                         </div>
+                        <a href="{% url 'iniciar_conversacion' user.id %}" class="btn">Iniciar Conversación con {{productor.nombre}}</a>
+                        
                     </a>
                 {% endfor %}
             {% else %}
