--- a/EcoWEB/Apps/Usuarios/templates/perfil.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil.html
@@ -161,6 +161,7 @@
             <div class="button_group">
                 <a href="{% url 'edit_profile' %}" class="btn btn_pass">Editar Perfil</a>
                 <a href="{% url 'mis_compras' %}" class="btn btn_pass">Mis compras</a>
+                <a href="{% url 'lista_conversaciones' %}" class="btn btn_pass">Mis conversaciones</a>
             </div>
             <div class="button_group">
                 <a href="/" class="btn">Volver a Inicio</a>
