--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -57,7 +57,7 @@
     }
   
     .form-control {
-      margin-left: 80px;
+      margin-left: 170px;
       flex-grow: 1; 
       margin-right: 20px;
       max-width: 800px;
@@ -161,7 +161,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="form-inline my-2 my-lg-0 flex-grow-1" action="{% url 'list_products' %}" method="GET">
-            <input class="form-control mr-sm-2 flex-grow-1" type="search" name="q" placeholder="Buscar producto" aria-label="Search">
+            <input class="form-control mr-sm-2 flex-grow-1" type="search" name="q" placeholder="Busca cualquier producto..." aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">BUSCAR</button>
         </form>
         <ul class="navbar-nav ml-auto">
@@ -200,13 +200,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link btn-menu" href="/productos/lista_productos">Productos</a>
+          <a class="nav-link btn-menu" href="/productos/lista_productos">Explorar Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn-menu" href="/usuarios/productores">Productores</a>
+          <a class="nav-link btn-menu" href="/usuarios/productores">Ver Productores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn-menu" href="#">Contacto</a>
+          <a class="nav-link btn-menu" href="#">Sobre MARKETECO</a>
         </li>
       </ul>
     </div>
@@ -267,7 +267,7 @@
                       </span>
                     </h1>
                     <p>
-                      El auténtico sabor de la leche y sus derivados ecológicos son provienen de animales criados 
+                      El auténtico sabor de la leche y sus derivados ecológicos provienen de animales criados 
                       de forma libre siempre exentos de cualquier tipo de maltrato.
                     </p>
                     <div class="btn-box">
@@ -328,7 +328,7 @@
                     </h1>
                     <p>
                       Cafés de procedencia ecológica y tejidos elaborados con algodón orgánico. 
-                      Completa tu estilo de vida con productos biodegradables como los procedentes del bambú.
+                      Completa tu estilo de vida con productos biodegradables como los que proceden del bambú.
                     </p>
                     <div class="btn-box">
                       <a href="/productos/lista_productos" class="btn-1">
@@ -546,14 +546,14 @@
             </div>
           </div>
         </a>
-        <a href="">
+        <a href="https://wa.me/34666666666">
           <div class="item ">
             <div class="img-box box-2">
               <img src="" alt="">
             </div>
             <div class="detail-box">
               <p>
-                Instagram
+                Whatsapp
               </p>
             </div>
           </div>
