--- a/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
@@ -165,6 +165,7 @@
             <div class="button_group">
                 <a href="{% url 'products' %}" class="btn">Mis Productos</a>
                 <a href="{% url 'edit_profile_prod' %}" class="btn btn_pass">Editar Perfil</a>
+                <a href="{% url 'lista_conversaciones' %}" class="btn btn_pass">Mis conversaciones</a>
             {% endif %}
             </div>                
             <div class="button_group">
