--- a/EcoWEB/static/css/style.scss
+++ b/EcoWEB/static/css/style.scss
@@ -410,7 +410,7 @@ a:focus {
       }
 
       &.box-2 {
-        background-image: url(../images/instagram-white.png);
+        background-image: url(../images/whatsapp-white.png);
       }
 
       &.box-3 {
