--- a/EcoWEB/Apps/Productos/templates/products.html
+++ b/EcoWEB/Apps/Productos/templates/products.html
@@ -93,14 +93,13 @@
             font-size: 2.5em;
             color: #3d8a4f;
             margin-bottom: 20px;
-            /* font-family: 'Poppins', sans-serif; */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
 
         .btn {
             width: calc(100% - 22px); 
-            padding: 10px;
+            padding: 10px 20px;
             margin: 20px;
             border: 1px solid #ddd;
             border-radius: 5px;
@@ -149,6 +148,10 @@
             display: flex;
             justify-content: center;
             margin-top: 20px;
+        }
+        .button_group .btn{
+            margin: 20px;
+            white-space: nowrap;
         }
 
         .hidden {
@@ -236,10 +239,10 @@
   <!-- Mostrar mensajes de Django -->
 
     <div class="container_productos">
-        <h2>Mis Productos</h2>
         {% load custom_filters %}
-        <div>
-            <a href="{% url 'add_product' %}" class="btn btn_pass">Añadir producto</a>
+        <div class="button_group">
+            <a href="{% url 'add_product' %}" class="btn btn_pass">Añadir nuevo producto</a>
+            <a href="mailto:info@marketeco.shop" class="btn btn_pass">Solicitar nueva categoría</a>
         </div>
         <div>
             <form method="get" action="{% url 'products' %}">
