--- a/EcoWEB/static/css/style.css
+++ b/EcoWEB/static/css/style.css
@@ -513,7 +513,7 @@ a:focus {
 }
 
 .info_items .item .img-box.box-2 {
-  background-image: url(../images/instagram-white.png);
+  background-image: url(../images/whatsapp-white.png);
 }
 
 .info_items .item .img-box.box-3 {
