--- a/EcoWEB/Apps/Productos/templates/products.html
+++ b/EcoWEB/Apps/Productos/templates/products.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
     <style>
-        body, html {
+                body, html {
             height: 100%; 
             margin: 0; 
             font-family: Arial, sans-serif; 
@@ -35,12 +35,16 @@
             overflow: hidden;
             text-align: center;
             margin: 10px;
-            padding: 20px 10px;
-            min-width: 500px;
+            padding: 20px;
+            min-width: 300px;
+            max-width: 400px;
+            flex: 1 0 21%; /* For better responsiveness */
+            box-sizing: border-box;
         }
 
         .product-item img {
             width: 100%;
+            object-fit: cover;
             height: auto;
             display: block;
         }
@@ -49,7 +53,6 @@
             margin-top: 10px;
             padding: 10px 20px;
             background-color: #3d8a4f;
-            /* color: #ffffff; */
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -67,22 +70,18 @@
             width: 100%;
         }
 
-        .products-grid .product-item {
-            flex: 0 0 calc(33.333% - 20px);
-            margin: 10px;
-        }
-
         .product-image {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        overflow: hidden; 
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            overflow: hidden; 
+            margin: auto;
         }
 
         .product-image img {
             width: 100%; 
-            height: auto;
-            border-radius: 50%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .h3 {
@@ -95,7 +94,6 @@
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
-
 
         .btn {
             width: calc(100% - 22px); 
@@ -123,7 +121,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .btn_pass{
+        .btn_pass {
             border: 1px solid #ddd;
             border-radius: 5px;
             background-color: #3d6f8a;
@@ -149,7 +147,8 @@
             justify-content: center;
             margin-top: 20px;
         }
-        .button_group .btn{
+
+        .button_group .btn {
             margin: 20px;
             white-space: nowrap;
         }
@@ -160,7 +159,9 @@
 
         .edit-form input[type="text"],
         .edit-form textarea,
-        .edit-form input[type="checkbox"] {
+        .edit-form input[type="checkbox"],
+        .edit-form input[type="number"],
+        .edit-form select {
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
@@ -292,7 +293,7 @@
                             </div>
                             <div>
                                 <label for="precio">Precio (€)</label>
-                                <input type="number" step="0.01" name="precio" value="{{ producto.precio }}" min="0.01" required="True">
+                                <input type="number" step="0.01" name="precio" value="{{ producto.precio|format_decimal }}" min="0.01" required="True">
                             </div>
                             <div>
                                 <label for="stock">Unidades</label>
