--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -206,7 +206,7 @@
           <a class="nav-link btn-menu" href="/usuarios/productores">Ver Productores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn-menu" href="#">Sobre MARKETECO</a>
+          <a class="nav-link btn-menu" href="/about">Sobre MARKETECO</a>
         </li>
       </ul>
     </div>
