--- a/EcoWEB/Apps/Productos/templates/list_products.html
+++ b/EcoWEB/Apps/Productos/templates/list_products.html
@@ -69,6 +69,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        width: 100%;
     }
 
     .products-grid .product-item {
