--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -377,7 +377,7 @@
               y transacción entre los productores y consumidores, procurando eliminar la figura del intermediario.
             </p>
             <div>
-              <a href="">
+              <a href="about/">
                 Saber más
               </a>
             </div>
@@ -534,7 +534,7 @@
   <section class="info_section layout_padding2">
     <div class="container">
       <div class="info_items">
-        <a href="https://maps.app.goo.gl/3Yf9uJddxnPE2ZPX7">
+        <a href="https://maps.app.goo.gl/3Yf9uJddxnPE2ZPX7" target="_blank">
           <div class="item ">
             <div class="img-box box-1">
               <img src="" alt="">
@@ -546,7 +546,7 @@
             </div>
           </div>
         </a>
-        <a href="https://wa.me/34666666666">
+        <a href="https://wa.me/34666666666" target="_blank">
           <div class="item ">
             <div class="img-box box-2">
               <img src="" alt="">
@@ -558,7 +558,7 @@
             </div>
           </div>
         </a>
-        <a href="mailto:info@marketeco.shop">
+        <a href="mailto:info@marketeco.shop" target="_blank">
           <div class="item ">
             <div class="img-box box-3">
               <img src="" alt="">
