--- a/EcoWEB/Apps/Usuarios/templates/signup_productor.html
+++ b/EcoWEB/Apps/Usuarios/templates/signup_productor.html
@@ -120,7 +120,7 @@
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Registrar</button> 
+                <button type="submit">Registrar como Productor o Distribuidor</button> 
                 {% if user.is_authenticated %}
                 <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{user.username}}</a>
                 {% endif %}
