mejorando v1.9 vistas productos

--- a/EcoWEB/Apps/Productos/templates/add_product.html
+++ b/EcoWEB/Apps/Productos/templates/add_product.html
@@ -25,7 +25,7 @@
   /* Estilos para el formulario de editar perfil */
   body, html {
       height: 100%; 
-      margin: 0; /* Elimina los márgenes predeterminados */
+      margin: 0;
       font-family: Arial, sans-serif; /* Usa una fuente genérica */
   }
 
@@ -87,6 +87,25 @@
           display: flex;
           justify-content: center;
       }
+            /* footer section*/
+
+    .footer_section_login {
+        background-color: #fbfdfd;
+        padding: 20px;
+        font-weight: 500;
+    }
+
+    .footer_section_login p {
+        color: #292929;
+        margin: 0;
+        text-align: center;
+    }
+
+    .footer_section_login a {
+        color: #292929;
+    }
+
+        /* end footer section*/
 
 </style>
 
